scroll padrão edge, tab nav fixed

--- a/src/app/pages/public/clickUp/clickUp.component.html
+++ b/src/app/pages/public/clickUp/clickUp.component.html
@@ -1,5 +1,5 @@
 <div class="scrollable-content">
-  <ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" class="nav-tabs">
+  <ul ngbNav #nav="ngbNav" [(activeId)]="activeTab" class="nav-tabs bg-body">
     
     
     <li [ngbNavItem]="1">
